--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Luís Aurélio Casoni</title>
+    <title>Michelle Soler Flores</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -74,14 +74,14 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Bem-vindo</h1>
-                        <h3>Você está na minha página pessoal - Luís Aurélio Casoni</h3>
+                        <h3>Você está na minha página pessoal - Michelle Soler Flores</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="mailto:luis_aurelio96@live.com" class="btn btn-default btn-lg"><i class="fa fa-send fa-fw"></i> <span class="network-name">E-mail</span></a>
+                                <a href="miih_flores21@hotmail.com" class="btn btn-default btn-lg"><i class="fa fa-send fa-fw"></i> <span class="network-name">E-mail</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/luisaureliocasoni" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="https://github.com/oicueeio" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                         </ul>
                         <p>Imagem de <a href="https://flic.kr/p/89ZXVw">Lord James</a>, sob a licença Creative Commons.</p>
@@ -109,7 +109,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Sobre mim</h2>
-                    <p class="lead">Meu nome é Luís Aurélio Casoni, tenho 20 anos. Estou cursando o curso de Ciência da Computação pela UNIGRAN. Meus interesses são a criação páginas Web, e programação Java e C++.</p>
+                    <p class="lead">Meu nome é Michelle Soler Flores, tenho 20 anos. Estou cursando o curso de Engenharia de Software pela UNIGRAN. Meus interesses são melhorar meu vago conhecimento em programçao em geral.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                 <!--TODO colocar minha foto -->
@@ -127,7 +127,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright text-muted small">Copyright &copy; Luís Aurélio Casoni 2016-19. Feito inicialmente para projeto final do curso HTML5: Desenvolvimento Web para Iniciantes, de Marcos Castro.</p>
+                    <p class="copyright text-muted small">Copyright &copy; “Copyright © Michelle Soler Flores 2019. Prova P2 de Gerência de
+                        Configuração”, UNIGRAN,Michelle Soler Flores.</p>
                 </div>
             </div>
         </div>
