--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                                 <a href="mailto:miih_flores21@hotmail.com" class="btn btn-default btn-lg"><i class="fa fa-send fa-fw"></i> <span class="network-name">E-mail</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/luisaureliocasoni" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="https://github.com/oicueeio" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                     </ul>
                 </div>
