--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright text-muted small">Copyright &copy; Luís Aurélio Casoni 2016. Feito inicialmente para projeto final do curso HTML5: Desenvolvimento Web para Iniciantes, de Marcos Castro.</p>
+                    <p class="copyright text-muted small">Copyright © Michelle Soler Flores 2019. Prova P2 de Gerência de
+                        Configuração, Unigran, Michelle Soler Flores</p>
                 </div>
             </div>
         </div>
